--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,11 @@
-<app-create-onomatopia (sendOnomatopiaToParent) = "onReceiveNewOnomatopia($event)"></app-create-onomatopia>
+<app-user></app-user>
+
+<!-- <app-create-onomatopia (sendOnomatopiaToParent) = "onReceiveNewOnomatopia($event)"></app-create-onomatopia>
 
 <ul *ngFor="let onomatopia of onomatopiaList">
 
   <li>{{onomatopia}} </li>
 
-  </ul>
+  </ul> -->
+
+
